--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 
-<!DOCTYPE html><html lang="zh-hants"><head><title>程式設計教學之 Python 不完全解決方案 -- Keith Yang</title><meta charset="utf-8"/><meta name="viewport" content="width=792, user-scalable=no"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><link rel="stylesheet" href="buildpack//shower-ribbon/styles/screen.css"/><link rel="stylesheet" href="buildpack//font-awesome/css/font-awesome.min.css"/><link rel="stylesheet" href="pygments.css"/><script src="buildpack//jquery/dist/jquery.min.js">
+<!DOCTYPE html><html lang="zh-hants"><head><title>Python Quest in Taiwan -- Keith Yang</title><meta charset="utf-8"/><meta name="viewport" content="width=792, user-scalable=no"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><link rel="stylesheet" href="buildpack//shower-ribbon/styles/screen.css"/><link rel="stylesheet" href="buildpack//font-awesome/css/font-awesome.min.css"/><link rel="stylesheet" href="pygments.css"/><script src="buildpack//jquery/dist/jquery.min.js">
 </script><style>.slide {
   font-family: "Trebuchet MS", "Source Han Sans TWHK", sans-serif;
   background-color: #fff;
@@ -103,7 +103,7 @@
 }
 .slide.patch a {
   color: #af4ad9;
-}</style></head><body class="list"><header class="caption"><h1>程式設計教學之 Python 不完全解決方案</h1><p class="en_font">Keith Yang</p></header><section id="Cover" class="slide cover"><div><h2>程式設計教學之<br/><span class="en_font">Python</span> 不完全解決方案</h2><hr/><h4 class="text-center"><a href="https://yang.keitheis.org" class="en_font">Keith Yang</a></h4><div class="coscup2014"><img src="pictures/coscup.png" alt="COSCUP"/> <span class="text">2014</span></div><style>.slide .coscup2014 {
+}</style></head><body class="list"><header class="caption"><h1>Python Quest in Taiwan</h1><p class="en_font">Keith Yang</p></header><section id="Cover" class="slide cover"><div><h2>程式設計教學之<br/><span class="en_font">Python</span> 不完全解決方案</h2><hr/><h4 class="text-center"><a href="https://yang.keitheis.org" class="en_font">Keith Yang</a></h4><div class="coscup2014"><img src="pictures/coscup.png" alt="COSCUP"/> <span class="text">2014</span></div><style>.slide .coscup2014 {
   margin-top: 2em;
   margin-right: -2em;
   float: right;
